navigation: misalignment in drop down menu fixed

--- a/liferay-plugins-sdk-6.2GA4/themes/GFBio-2.0-bootstrap3-theme/docroot/_diffs/css/custom.css
+++ b/liferay-plugins-sdk-6.2GA4/themes/GFBio-2.0-bootstrap3-theme/docroot/_diffs/css/custom.css
@@ -44,7 +44,7 @@
 		.h1, .h2, .h3, .h4, .h5, .h6 {
         font-family: 'Lato', sans-serif;
 			/*color:#666;*/
-			color:rgb(49, 86, 159);
+			color:#335AA3;
 		}
 		 h1{
 			font-size: 36px;
@@ -71,6 +71,10 @@
 		
 		
 		
+	}
+	
+	.row{
+		padding:0;
 	}
 	 #search{
 		margin-top:0;
@@ -102,48 +106,6 @@
 		margin-top:80px;
 	}
 	
-.sec-title {
-    margin-bottom: 50px;
-}
-
-.sec-title.white {
-    color: #fff;
-}
-
-.sec-title h2 {
-    font-size: 36px;
-    margin: 0 0 30px;
-    padding-bottom: 30px;
-    position: relative;
-    text-transform: uppercase;
-    font-weight: 300;
-}
-
-.sec-title.white h2 {
-    color: #fff;
-}
-
-.sec-title h2:after {
-    /*border-bottom: 1px solid #009ee3;*/
-    border-bottom: 2px solid rgba(129, 178, 72, 0.8);
-    content: "";
-    display: block;
-    left: 45%;
-    bottom: 0;
-    position: absolute;
-    width: 115px;
-}
-
-.sec-title.white h2:after {
-    border-bottom: 1px solid #fff;
-}
-
-.parallax {
-    background-attachment: fixed;
-    background-position: center top;
-    background-repeat: no-repeat;
-    background-size: cover;
-}	
 
 
 
@@ -198,6 +160,7 @@
     transition-duration: 0.3s;
 
     -moz-osx-font-smoothing: grayscale;
+    text-decoration: none;
 }
 
 .btn-effect:before {
@@ -269,6 +232,10 @@ textarea{
 /*==========================================================
 	Menu, Navigation
 ===========================================================*/	
+.dropdown-menu{
+	white-space:nowrap;	
+}
+
 .dropdown-menu > li > a{
 	padding: 3px 10px;
 }
@@ -291,7 +258,13 @@ textarea{
 	
 	
 	ul > li > a.menu-active{
-			color:#337ab7;
+			/*color:#337ab7;*/
+			color:#335AA3;
+	}
+	
+	ul > li > a:hover{
+			
+			color:#335AA3;
 	}
 }
 
@@ -490,7 +463,8 @@ div#navbar-search-wrapper {
 }
 
 .navigation-shadow .navbar-inverse .navbar-nav > li > a:hover {
-    color: #333333;
+    /*color: #333333;*/
+    color:#335AA3;
     border-bottom: 3px solid rgba(52, 90, 162, 0.8);
 }
 
@@ -523,6 +497,7 @@ div#navbar-search-wrapper {
 
 .yamm-content {
     padding-top: 0;
+    
 }
 
 .yamm-content a {
